<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.philips.lighting.quickstart.ControlActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_click_random_button" />

    <Button
        android:id="@+id/switchDevicesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btn_switch_devices" android:paddingLeft="10dp" android:paddingRight="10dp"/>

    <Button
        android:id="@+id/actionOneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchDevicesButton"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="20dp"
        android:text="@string/btn_action_one" android:paddingLeft="10dp" android:paddingRight="10dp"/>

    <Button
        android:id="@+id/actionTwoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchDevicesButton"
        android:layout_toRightOf="@+id/actionOneButton"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="20dp"
        android:text="@string/btn_action_two" android:paddingLeft="10dp" android:paddingRight="10dp"/>

    <Button
        android:id="@+id/connectHueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionTwoButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btn_connect_hue" android:paddingLeft="10dp" android:paddingRight="10dp"/>


</RelativeLayout>
